# CuteLingoExpress

./: .gitignore  README.md  TODO.md  auto_trans.py  auto_trans_yaml.py  cutelingoexpress_version.py  localPipeline.sh  logo.xcf  pyproject.toml  requirements-dev.txt  requirements.txt  test_auto_trans.py  version.py  worst_findings.md
testing/: helloworld.ts  keepassxc_de.ts  keepassxc_de.ts.README.md
