[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutelingoexpress"
dynamic = ["version"]
description = "Translate Qt TS files and preserve structure for review."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "translators==5.3.1",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6,<8",
  "pylint>=3.3,<4",
]

[tool.setuptools]
py-modules = ["auto_trans", "version"]

[tool.setuptools.dynamic]
version = {attr = "version.VERSION"}

[tool.coverage.run]
branch = true
source = ["auto_trans", "version"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"
