[build-system]
requires = ["setuptools==82.0.1", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cutelingoexpress"
dynamic = ["version"]
description = "Translate Qt TS files and preserve structure for review."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
dependencies = [
  "translators==6.0.4",
]

[project.optional-dependencies]
dev = [
  "build==1.4.3",
  "coverage[toml]==7.13.5",
  "pylint==4.0.5",
]

[project.scripts]
cutelingoexpress = "auto_trans:main"

[tool.setuptools]
py-modules = ["auto_trans", "version"]

[tool.setuptools.dynamic]
version = {attr = "version.VERSION"}

[tool.coverage.run]
branch = true
source = ["auto_trans", "version"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"
